fix the an issue with the grid not being responsive on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap");
 
 /* global styles  */
-
+* {
+  box-sizing: border-box;
+}
 html {
   scroll-behavior: smooth;
 }
@@ -141,7 +143,7 @@ html {
   font-size: small;
 }
 
-@media (max-width: 750px) {
+@media screen and (max-width: 1028px) {
   .title-image {
     width: auto;
     max-width: 400px;
